Adicionado link para fotos do ENCUP 2023

--- a/private/src/view/templates/encup/components/header.html
+++ b/private/src/view/templates/encup/components/header.html
@@ -7,8 +7,16 @@
         </button>
         <div class="collapse navbar-collapse" id="navbar-options">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a href="/fotos" class="btn btn-secondary-bc ms-0 ms-lg-3 mt-3 mt-sm-0" role="button"><b>Fotos do ENCUP 2022 </b><span class="material-symbols-outlined">photo</span></a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="/eventos" id="navbar-dropdown-menu-ev" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <b>Galeria de fotos </b><span class="material-symbols-outlined">photo</span></a>
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbar-dropdown-menu-ev">
+                <li><a class="dropdown-item" href="https://drive.google.com/drive/folders/1-Qf8G5vtTk7_YU-rliQ-V6u3F9PmbEhN" target="_blank"><span class="material-symbols-outlined">photo</span> <b>ENCUP 2023</b></a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="/fotos"><span class="material-symbols-outlined">photo</span> <b>ENCUP 2022</b></a></li>
+                <li>
+              </ul>
             </li>
           </ul>
         </div>
