Alterado cor botão fotos ENCUP e incluída pasta de materiais

--- a/private/src/view/templates/encup/components/header.html
+++ b/private/src/view/templates/encup/components/header.html
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbar-options">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="/eventos" id="navbar-dropdown-menu-ev" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="btn btn-secondary-bc text-white dropdown-toggle" href="/eventos" id="navbar-dropdown-menu-ev" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <b>Galeria de fotos </b><span class="material-symbols-outlined">photo</span></a>
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbar-dropdown-menu-ev">
