--- a/private/src/view/templates/encup/homepage.html
+++ b/private/src/view/templates/encup/homepage.html
@@ -29,14 +29,13 @@
       </div>
       <div class="w-100 text-center mb-2">
         <a href="/manual-do-participante.pdf" target="_blank" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto"><b><span class="material-symbols-outlined">info</span> Manual do Participante</b></a>
-        <button type="button" class="btn btn-tertiary-bc m-1 minw-240 w-auto" data-bs-toggle="modal" data-bs-target="#modal-subscription">
-          <b><span class="material-symbols-outlined">priority</span> Inscreva-se</b>
-        </button>
         <button type="button" class="btn btn-tertiary-bc m-1 minw-240 w-auto" data-bs-toggle="modal" data-bs-target="#modal-event-schedule">
           <b><span class="material-symbols-outlined">format_list_bulleted</span> Programação</b>
         </button>
+        <a href="https://drive.google.com/drive/folders/1XrFPHScpcXyRG_JVFu003JdCp_G0S-xH?usp=sharing" target="_blank" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto">
+          <b><span class="material-symbols-outlined">folder</span> Materiais e Slides</b>
+        </a>
       </div>
-      
     </div>
   </div>
   <!-- Button trigger modal -->
