--- a/private/src/view/templates/restricted/admin/voting.html
+++ b/private/src/view/templates/restricted/admin/voting.html
@@ -8,11 +8,12 @@
 
 {% block innerMain %}
 
-<h2 class="mt-3 mb-4">{{voting.name}} - {{voting.datetime}}</h2>
+<h2 class="mt-3 mb-4">{{voting.name}} | {{voting.datetime|date('d/m/Y H:i:s')}}</h2>
 <p>https://sistemas.brasilcursinhos.org/voting/{{voting.code}}</p>
 <div class="card">
-  <div class="card-header">
+  <div class="card-header d-flex justify-content-between">
     <h4 class="card-title">Lista de Eleitores</h4>
+    <h4 class="card-title">Total: {{data|length}}</h4>
   </div>
   <div class="card-body">
 {% for voter in data %}
@@ -28,10 +29,17 @@
       </div>
     </div>
 {% endfor %}
-    <div class="row mt-3 text-center">
-        <form action="/administrador/voting/{{voting.code}}" method="post">
-            <button class="btn btn-secondary-bc"><span class="material-symbols-outlined"> download </span> Baixar Lista de Eleitores</button>
+    <div class="row mt-3 justify-content-center g-3">
+      <div class="col-auto">
+        <form action="/administrador/voting/{{voting.code}}/helios" method="post">
+          <button class="btn btn-secondary-bc"><span class="material-symbols-outlined"> download </span> Baixar Lista de Eleitores - Helios</button>
         </form>
+      </div>
+      <div class="col-auto">
+        <form action="/administrador/voting/{{voting.code}}/ata" method="post">
+          <button class="btn btn-secondary-bc">  <span class="material-symbols-outlined"> download </span>  Baixar Lista de Eleitores - Ata  </button>
+        </form>
+      </div>
     </div>
   </div>
 </div>
