--- a/private/src/view/templates/encup/components/header.html
+++ b/private/src/view/templates/encup/components/header.html
@@ -1,7 +1,7 @@
 <header><!--Barra de navegação-->
     <nav class="navbar navbar-expand-sm fixed-top navbar-dark bg-primary-color-bc">
       <div class="container-fluid">
-        <a href="/"><img src="/assets/img/logos/bc-branco.png" height="40" alt="Projeto Educação Solidária - Cursinho PES"></a><a class="navbar-brand p-0 me-auto lh-1" href="/"><b class="ps-2 font-bc fs-3">ENCUP 2023</b></a>
+        <a href="/"><img src="/assets/img/logos/bc-branco.png" height="40" alt="Projeto Educação Solidária - Cursinho PES"></a><a class="navbar-brand p-0 me-auto lh-1" href="/"><b class="ps-2 font-bc fs-3">{{websiteName}}</b></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-options" aria-controls="navbar-options" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
