Atualização dados de pagamento encup 2024

--- a/private/src/view/templates/encup/2024.html
+++ b/private/src/view/templates/encup/2024.html
@@ -33,8 +33,8 @@
           <b><span class="material-symbols-outlined">format_list_bulleted</span> Programação (em breve)</b>
         </button>
         <a href="https://drive.google.com/drive/folders/1XrFPHScpcXyRG_JVFu003JdCp_G0S-xH?usp=sharing" target="_blank" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto" hidden>
-          <b><span class="material-symbols-outlined">folder</span> Materiais e Slides</b>
-        <a href="https://bit.ly/ENCUP24" target="_blank" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto"><b>Formulário de Inscrição</b> <span class="material-symbols-outlined">edit_note</span></a>
+        <b><span class="material-symbols-outlined">folder</span> Materiais e Slides</b>
+        <a href="/inscricao" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto"><b>Realizar Inscrição</b> <span class="material-symbols-outlined">edit_note</span></a>
         </a>
       </div>
     </div>
