--- a/private/src/view/templates/encup/2024.html
+++ b/private/src/view/templates/encup/2024.html
@@ -29,8 +29,8 @@
       </div>
       <div class="w-100 text-center mb-2">
         <button class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto" hidden><b><span class="material-symbols-outlined">info</span> Manual do Participante</b></button>
-        <button type="button" class="btn btn-tertiary-bc m-1 minw-240 w-auto" data-bs-toggle="modal" data-bs-target="#modal-event-schedule" disabled>
-          <b><span class="material-symbols-outlined">format_list_bulleted</span> Programação (em breve)</b>
+        <button type="button" class="btn btn-tertiary-bc m-1 minw-240 w-auto" data-bs-toggle="modal" data-bs-target="#modal-event-schedule">
+          <b><span class="material-symbols-outlined">format_list_bulleted</span> Programação</b>
         </button>
         <a href="https://drive.google.com/drive/folders/1XrFPHScpcXyRG_JVFu003JdCp_G0S-xH?usp=sharing" target="_blank" class="btn btn-tertiary-bc text-decoration-none m-1 minw-240 w-auto" hidden>
         <b><span class="material-symbols-outlined">folder</span> Materiais e Slides</b>
@@ -169,13 +169,14 @@
   <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header bg-primary-bc text-white">
-        <h1 class="modal-title fs-3 fw-bold" id="modal-event-schedule-label">PROGRAMAÇÃO ENCUP 2023</h1>
+        <h1 class="modal-title fs-3 fw-bold" id="modal-event-schedule-label">PROGRAMAÇÃO ENCUP 2024</h1>
         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close" id="btn-close-modal-event-schedule"></button>
       </div>
       <div class="modal-body">
         <div class="row g-3" id="schedule">
           <div class="col-12 col-lg-6">
-            <div class="card">
+            <img src="/assets/img/prog2024-d1.png" class="w-100" alt="Programação dia 02">
+            <!--<div class="card">
               <div class="card-header bg-encup-primary text-white">
                 <h4 class="card-title text-center mb-0">SÁBADO — 26/08</h4>
               </div>
@@ -300,10 +301,11 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div>-->
           </div>
           <div class="col-12 col-lg-6">
-            <div class="card">
+            <img src="/assets/img/prog2024-d2.png" class="w-100" alt="Programação dia 02">
+            <!--<div class="card">
               <div class="card-header bg-encup-primary text-white">
                 <h4 class="card-title text-center mb-0">DOMINGO — 27/08</h4>
               </div>
@@ -399,7 +401,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div>-->
           </div>
         </div>
         <div class="card d-none" id="workshops">
