Alterada disponibilidade de inscrições

--- a/private/src/view/templates/encup/pages/inscription.html
+++ b/private/src/view/templates/encup/pages/inscription.html
@@ -77,11 +77,11 @@
                 </div>
                 <p class="mb-2 ms-0 ms-lg-3">
                   <span class="material-symbols-outlined">confirmation_number</span>
-                  Hostel conforto (Tapera):  R$ 115,00
+                  <span class="text-decoration-line-through">Hostel conforto (Tapera):  R$ 115,00</span> <strong>ESGOTADO!</strong>
                 </p>
                 <div class="w-100 text-center mb-3">
-                  <button class="btn btn-tertiary-bc w-auto fw-bold btn-pay-with-pix m-1" value="4">Pagar com PIX <span class="material-symbols-outlined">qr_code_2</span></button>
-                  <a class="btn btn-tertiary-bc w-auto fw-bold py-1 text-decoration-none m-1" href="https://pag.ae/7-SR_fu2H" target="_blank">Pagar com <img src="/assets/img/logos/pagbank.png" alt="Logo PagBank" height="27.2px"></a>
+                  <button class="btn btn-tertiary-bc w-auto fw-bold btn-pay-with-pix m-1" value="4" disabled>Pagar com PIX <span class="material-symbols-outlined">qr_code_2</span></button>
+                  <button class="btn btn-tertiary-bc w-auto fw-bold py-1 text-decoration-none m-1" disabled>Pagar com <img src="/assets/img/logos/pagbank2.png" alt="Logo PagBank" height="27.2px"></button>
                 </div>
                 <p class="mb-2 ms-0 ms-lg-3">
                   <span class="material-symbols-outlined">confirmation_number</span>
@@ -110,11 +110,11 @@
                 </div>
                 <p class="mb-2 ms-0 ms-lg-3">
                   <span class="material-symbols-outlined">confirmation_number</span>
-                  Hostel conforto (Tapera):  R$ 190,00
+                  <span class="text-decoration-line-through">Hostel conforto (Tapera):  R$ 190,00</span> <strong>ESGOTADO!</strong>
                 </p>
                 <div class="w-100 text-center mb-3">
-                  <button class="btn btn-tertiary-bc w-auto fw-bold btn-pay-with-pix m-1" value="7">Pagar com PIX <span class="material-symbols-outlined">qr_code_2</span></button>
-                  <a class="btn btn-tertiary-bc w-auto fw-bold py-1 text-decoration-none m-1" href="https://pag.ae/7-SS1zSHQ" target="_blank">Pagar com <img src="/assets/img/logos/pagbank.png" alt="Logo PagBank" height="27.2px"></a>
+                  <button class="btn btn-tertiary-bc w-auto fw-bold btn-pay-with-pix m-1" value="7" disabled>Pagar com PIX <span class="material-symbols-outlined">qr_code_2</span></button>
+                  <button class="btn btn-tertiary-bc w-auto fw-bold py-1 text-decoration-none m-1" disabled>Pagar com <img src="/assets/img/logos/pagbank2.png" alt="Logo PagBank" height="27.2px"></button>
                 </div>
                 <p class="mb-2 ms-0 ms-lg-3">
                   <span class="material-symbols-outlined">confirmation_number</span>
