Alterações para agendamento de entrevistas

--- a/private/src/view/templates/components/public-header.html
+++ b/private/src/view/templates/components/public-header.html
@@ -9,7 +9,7 @@
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 {% if websiteName is not defined %}
-                <a href="/login" class="btn btn-secondary-bc ms-0 ms-lg-3" role="button"><b>Login </b><span class="material-symbols-outlined">login</span></a>
+                <a href="/entrevista/login" class="btn btn-secondary-bc ms-0 ms-lg-3" role="button"><b>Login </b><span class="material-symbols-outlined">login</span></a>
                 {% endif %}
               </li>
             </ul>
