--- a/private/src/view/templates/errorHttp.html
+++ b/private/src/view/templates/errorHttp.html
@@ -17,7 +17,7 @@
             <p class="fs-4 mb-4">{{description}}</p>
 {% endif %}
 {% if code == '401' %}
-            <p class='fs-4'><a href='/login'><b>Clique aqui</b></a> para realizar o login ou <a href='/'><b>clique aqui</b></a> para voltar a página inicial.</p>
+            <p class='fs-4'><a href='/entrevista/login'><b>Clique aqui</b></a> para realizar o login ou <a href='/'><b>clique aqui</b></a> para voltar a página inicial.</p>
 {% else %}
             <p class="fs-4"><a href='/'><b>Clique aqui</b></a> para voltar a página inicial.</p>
 {% endif %}
