--- a/private/src/view/templates/restricted/admin/interviews.html
+++ b/private/src/view/templates/restricted/admin/interviews.html
@@ -43,7 +43,7 @@
         <input type="text" class="form-control" value="{{interview.datetime|date('d/m/Y')}}" disabled>
       </div>
       <div class="col-1">
-        <input type="text" class="form-control" value="{{interview.datetime|date('h\\h')}}" disabled>
+        <input type="text" class="form-control" value="{{interview.datetime|date('H\\h')}}" disabled>
       </div>
       <div class="col-2">
         <a href="{{interview.meet}}" class="btn btn-secondary-bc w-100">Meet</a>
