--- a/private/src/view/templates/restricted/admin/interviews.html
+++ b/private/src/view/templates/restricted/admin/interviews.html
@@ -1,17 +1,16 @@
 {% extends "restricted/base.html" %}
 
 {% block innerHead %}
-<title>Votações - Brasil Cursinhos</title>
+<title>Entrevistas Agendadas - Brasil Cursinhos</title>
 <meta name="keywords" content="Brasil Cursinhos">
 <meta name="description" content="Página de administrador do site Brasil Cursinhos.">
 {% endblock innerHead %}
 
 {% block innerMain %}
 
-<h2 class="mt-3 mb-4">Lista de entrevistas</h2>
-<div class="card">
+<div class="card mt-4">
   <div class="card-header">
-    <h4 class="card-title">Entrevistas agendadas</h4>
+    <h4 class="card-title">ENTREVISTAS AGENDADAS</h4>
   </div>
   <div class="card-body">
     <div class="row g-2">
