Adicionada mensagem para enviar e-mail em caso de erro

--- a/private/src/view/templates/public/login-interviews.html
+++ b/private/src/view/templates/public/login-interviews.html
@@ -21,7 +21,7 @@
           <form action="/entrevista/login" method="post" id="login-form">
             <input type="text" value="{{formCode}}" name="form-code" hidden>
             <h4 class="card-title mb-3 w-100 text-center">Seja bem-vindo!</h4>
-            <h6 class="card-subtitle mb-3 text-muted w-100 text-center">Realize o login para acessar as opções de horário para agendamento da sua entrevista!</h6>
+            <h6 class="card-subtitle mb-3 text-muted w-100 text-center">Realize o login para acessar as opções de horário para&nbsp;agendamento da sua entrevista!</h6>
             <div class="row mb-3">
               <div class="col-12">
                 <label for="user"><b>Usuário:</b></label>
@@ -56,6 +56,9 @@
               <div class="col">
                 <button class="btn btn-secondary-bc w-100"><b>Entrar</b> <span class="material-symbols-outlined">login</span></button>
               </div>
+            </div>
+            <div class="row mb-2">
+              <small class="my-0">Em caso de problemas ao realizar o login ou o agendamento, mande um e-mail para <a href="mailto:gestaodepessoas@brasilcursinhos.org"><strong>gestaodepessoas@brasilcursinhos.org</strong></a></small>
             </div>
           </form>
         </div>
